--- a/app/templates/map-draw-basic.hbs
+++ b/app/templates/map-draw-basic.hbs
@@ -1,4 +1,4 @@
 <button type="button" data-toggle="tooltip" data-original-title="{{followPathModeTitle}}"
-        class="btn btn-brown-red map-draw-follow-path" {{action 'toggleFollowPathMode'}}>
+        class="btn btn-brown-red map-draw-follow-path hidden" {{action 'toggleFollowPathMode'}}>
     <span class="glyphicon glyphicon-{{followPathModeIcon}}" aria-hidden="true"></span>
 </button>
