--- a/app/templates/mtg-trail-tools-import-traces.hbs
+++ b/app/templates/mtg-trail-tools-import-traces.hbs
@@ -4,16 +4,16 @@
             <table class="table table-hover table-condensed">
                 <tbody>
                 <tr>
-                    <td {{action 'command' 'trace.trailer.import'}}>
+                    <td {{action 'trailerTraceImportAction'}}>
                     <span type="button" data-toggle="tooltip" title="Import the Trailer's Trail"
-                          class="btn btn-pink map-draw-trailer">
+                          class="btn btn-pink mtg-trail-import-trailer">
                         <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
                     </span>
                         Import trailer's track
                     </td>
                 </tr>
                 <tr>
-                    <td {{action 'command' 'trace.team.import'}}>
+                    <td {{action 'teamTraceImportAction'}}>
                     <span type="button" data-toggle="tooltip" title="Import the Team's Trail"
                           class="btn btn-warning mtg-trail-import-team">
                         <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
