--- a/app/templates/map-layers.hbs
+++ b/app/templates/map-layers.hbs
@@ -1,11 +1,11 @@
-{{#dropdown-list item="Layers" img="assets/images/layers.png" btn-radius="no-radius" toggle="tooltip" title="Select the map layers, drag the handle to change the opacity"}}
+{{#dropdown-list item="Layers" img="assets/images/layers.png" btn-radius="no-radius" toggle="tooltip" title="map.menu.layers.tooltip"}}
     <ul {{bind-attr class=":dropdown-menu :map-layers-dropdown"}}>
         <li>
             <table class="table table-striped table-condensed">
                 <thead>
                 <tr>
-                    <th>Layer</th>
-                    <th>Opacity</th>
+                    <th>{{t "map.menu.layers.layer"}}</th>
+                    <th>{{t "map.menu.layers.opacity"}}</th>
                 </tr>
                 </thead>
                 <tbody>
