--- a/app/templates/map-location.hbs
+++ b/app/templates/map-location.hbs
@@ -1,14 +1,14 @@
 <div class="input-group">
   {{input type="text" class="form-control map-location-search-input" value=locationSearch action='findLocation'}}
     <span class="input-group-btn">
-      <button type="button" data-toggle="tooltip" data-original-title="Place Lookup" class="btn btn-default" {{action 'findLocation'}}>
+      <button type="button" data-toggle="tooltip" data-original-title={{t "map.menu.location.search.tooltip"}} class="btn btn-default" {{action 'findLocation'}}>
           <i class="glyphicon glyphicon-search"></i>
       </button>
-      <button type="button" data-toggle="tooltip" data-original-title="Get address on map"
+      <button type="button" data-toggle="tooltip" data-original-title={{t "map.menu.location.info.tooltip"}}
               class="btn btn-default" {{action 'locateOnMap'}}>
           <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
       </button>
-      <button type="button" data-toggle="tooltip" data-original-title="Track GPS location"
+      <button type="button" data-toggle="tooltip" data-original-title={{t "map.menu.location.gps.tooltip"}}
               class="btn btn-default" {{action 'gpsLocation'}}>
           <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
       </button>
