--- a/app/templates/map-weather.hbs
+++ b/app/templates/map-weather.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list item="Weather" img="assets/images/weather.png" color="default" btn-radius="no-radius" toggle="tooltip" title="Select the weather registered from the map's center"}}
+{{#dropdown-list item="Weather" img="assets/images/weather.png" color="default" btn-radius="no-radius" toggle="tooltip" title="map.menu.weather.tooltip"}}
   <ul class="dropdown-menu">
     <li>
       <table class="table table-striped table-condensed">
@@ -10,7 +10,7 @@
                   {{date-picker class="form-control" date=date valueFormat='YYYY-MM-DD' size="8"}}
                   {{view "select" class="form-control" content=time optionLabelPath="content.value" value=selectedTime}}
                   <span class="input-group-btn">
-                    <button type="button" class="btn btn-default btn-sm" {{action 'checkWeather'}}>Get</button>
+                    <button type="button" class="btn btn-default btn-sm" {{action 'checkWeather'}}>{{t "map.menu.weather.get"}}</button>
                   </span>
                 </div>
               </div>
