ajout de traductions, problème avec les placeholders (input

--- a/app/templates/map-weather-result.hbs
+++ b/app/templates/map-weather-result.hbs
@@ -1,5 +1,5 @@
 <tr>
-    <td class="title">Time (hhmm)</td>
+    <td class="title">{{t "map.menu.weather.result.time"}}</td>
     <td>{{weather.time}}</td>
 </tr>
 <tr>
@@ -7,42 +7,42 @@
     <td><img width="24" {{bind-attr src=weather.weatherIconUrl}} alt="Logo"/></td>
 </tr>
 <tr>
-    <td class="title">Feels Like Temperature</td>
+    <td class="title">{{t "map.menu.weather.result.FeelsLikeC"}}</td>
     <td>{{ weather.FeelsLikeC }} °C</td>
 </tr>
 <tr>
-    <td class="title">Wind Direction Arrow</td>
+    <td class="title">{{t "map.menu.weather.result.wind.direction"}}</td>
     <td class="wind-direction"><img src="assets/images/arrow-right.png"/></td>
 </tr>
 <tr>
-    <td class="title">Humidity</td>
+    <td class="title">{{t "map.menu.weather.result.humidity"}}</td>
     <td>{{ weather.humidity }} %</td>
 </tr>
 <tr>
-    <td class="title">Precipitations</td>
+    <td class="title">{{t "map.menu.weather.result.precipMM"}}</td>
     <td>{{ weather.precipMM }} mm</td>
 </tr>
 <tr>
-    <td class="title">Wind Speed</td>
+    <td class="title">{{t "map.menu.weather.result.windspeedKmph"}}</td>
     <td>{{ weather.windspeedKmph }} km/h</td>
 </tr>
 <tr>
-    <td class="title">Temperature</td>
+    <td class="title">{{t "map.menu.weather.result.tempC"}}</td>
     <td>{{weather.tempC}} °C</td>
 </tr>
 <tr>
-    <td class="title">Wind Direction</td>
+    <td class="title">{{t "map.menu.weather.result.winddir16Point"}}</td>
     <td>{{weather.winddir16Point}}</td>
 </tr>
 <tr>
-    <td class="title">Visibility</td>
+    <td class="title">{{t "map.menu.weather.result.visibility"}}</td>
     <td>{{ weather.visibility }} km</td>
 </tr>
 <tr>
-    <td class="title">Pressure</td>
+    <td class="title">{{t "map.menu.weather.result.pressure"}}</td>
     <td>{{ weather.pressure }} millibars</td>
 </tr>
 <tr>
-    <td class="title">Cloud Coverage</td>
+    <td class="title">{{t "map.menu.weather.result.cloudcover"}}</td>
     <td>{{ weather.cloudcover }} %</td>
 </tr>
