WIP: traduction en cours jusque matg-trail-manager

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -460,3 +460,7 @@ label.mtg-item-position input[type="radio"] {
   filter: brightness(0) invert(100%);
   -webkit-filter: brightness(0) invert(100%);
 }
+
+.width-full {
+  width: 100%;
+}
