--- a/app/templates/mtg-levels.hbs
+++ b/app/templates/mtg-levels.hbs
@@ -1,12 +1,12 @@
-{{#dropdown-list item="Level" img="assets/images/rocket.png" btn-radius="no-radius" toggle="tooltip" title="Select the trail's level"}}
+{{#dropdown-list item="Level" img="assets/images/rocket.png" btn-radius="no-radius" toggle="tooltip" title="map.menu.mtg.trail.levels.tooltip"}}
     <ul class="dropdown-menu mtg-trail-level-dropdown">
         <li class="header">
             <table class="table table-hover table-condensed">
                 <thead>
                 <tr>
                     <th colspan="2">
-                        <div class="input-group input-group-sm">
-                          {{input type="text" class="form-control" value=addLevelName placeholder="Level name" size="8"}}
+                        <div class="input-group input-group-sm width-full">
+                          {{input type="text" class="form-control" value=addLevelName placeholder=(t "map.menu.mtg.trail.levels.level.name.placeholder") size="8"}}
                           <span class="input-group-btn">
                             <button type="button" class="btn btn-default" {{action 'addLevel'}}>
                               <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
@@ -23,8 +23,8 @@
                           {{level.name}}
                         </td>
                         <td class="mtg-level-tools-buttons">
-                          <button type="button" toggle="tooltip"
-                                  title="Delete the level from your browser's memory"
+                          <button type="button" data-toggle="tooltip"
+                                  title={{t "map.menu.mtg.trail.levels.level.delete"}}
                                   class="btn btn-warning" {{action "deleteLevel" level}}>
                               <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                           </button>
