--- a/app/templates/mtg-trail-manager-head.hbs
+++ b/app/templates/mtg-trail-manager-head.hbs
@@ -1,4 +1,4 @@
-<div class="input-group">
+<div class="input-group width-full">
     {{input class="form-control btn-group" placeholder="trail's name" value=addTrailName}}
     <span class="input-group-btn">
       <button type="button" class="btn btn-default" {{action 'command' 'trail.add'}}>
