fin de la traduction en Français !

--- a/app/templates/mtg-trail-basic.hbs
+++ b/app/templates/mtg-trail-basic.hbs
@@ -1,5 +1,5 @@
 <!--<form class="form-inline btn-group">-->
-{{#dropdown-list item="Trails" img="assets/images/track.png"}}
+{{#dropdown-list item="Trails" img="assets/images/track.png" toggle="tooltip" title="map.menu.mtg.trail.tooltip"}}
     <ul class="dropdown-menu mtg-trail-trails-dropdown">
         <li>
             <table class="table table-hover table-striped table-condensed">
