--- a/app/templates/mtg-trail-tools-export-traces.hbs
+++ b/app/templates/mtg-trail-tools-export-traces.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list item="Export" icon="export" toggle="tooltip" title="Export the path related ot the trailer's trail"}}
+{{#dropdown-list item="Export" icon="export" toggle="tooltip" title="map.menu.mtg.trail.tools.export.trailer.tooltip"}}
     <ul class="dropdown-menu mtg-trail-tools-export-dropdown">
       {{#each formats as |format|}}
           <li><a {{action 'trailerTraceExportAction' format}}>{{format}}</a></li>
