--- a/app/templates/mtg-trail-tools-trace-team.hbs
+++ b/app/templates/mtg-trail-tools-trace-team.hbs
@@ -1,4 +1,7 @@
-<button type="button" data-toggle="tooltip" data-original-title="Draw the Team's Trail"
-        class="btn btn-warning mtg-trail-create-team" {{action 'teamTraceCreateAction'}}>
+<button type="button"
+        class="btn btn-warning mtg-trail-create-team"
+        {{action 'teamTraceCreateAction'}}
+        data-toggle="tooltip"
+        title="map.menu.mtg.trail.tools.trace.team.tooltip">
     <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
 </button>
