--- a/app/templates/mtg-trail-manager.hbs
+++ b/app/templates/mtg-trail-manager.hbs
@@ -1,4 +1,4 @@
-{{#dropdown-list item="Trails" img="assets/images/track.png" toggle="tooltip" title="Create or select a trail"}}
+{{#dropdown-list item="Trails" img="assets/images/track.png" toggle="tooltip" title="map.menu.mtg.trail.tooltip"}}
     <ul class="dropdown-menu mtg-trail-trails-dropdown">
         <li>
             <table class="table table-hover table-striped table-condensed">
