--- a/app/templates/mtg-trail-tools-trace-trailer.hbs
+++ b/app/templates/mtg-trail-tools-trace-trailer.hbs
@@ -1,4 +1,7 @@
-<button type="button" data-toggle="tooltip" data-original-title="Draw the Trailer's Trail"
-        class="btn btn-pink mtg-trail-create-trailer" {{action 'trailerTraceCreateAction'}}>
+<button type="button"
+        class="btn btn-pink mtg-trail-create-trailer"
+        {{action 'trailerTraceCreateAction'}}
+        data-toggle="tooltip"
+        title="map.menu.mtg.trail.tools.trace.trailer.tooltip">
     <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
 </button>
