--- a/app/templates/mtg-trail-tools-trace-team.hbs
+++ b/app/templates/mtg-trail-tools-trace-team.hbs
@@ -2,6 +2,6 @@
         class="btn btn-warning mtg-trail-create-team"
         {{action 'teamTraceCreateAction'}}
         data-toggle="tooltip"
-        title="map.menu.mtg.trail.tools.trace.team.tooltip">
+        title={{t "map.menu.mtg.trail.tools.trace.team.tooltip"}}>
     <img src="assets/images/track.png" class="inverted" width="16" height="16"/>
 </button>
