--- a/app/templates/mtg-trail-tools-trace-trailer.hbs
+++ b/app/templates/mtg-trail-tools-trace-trailer.hbs
@@ -2,6 +2,6 @@
         class="btn btn-pink mtg-trail-create-trailer"
         {{action 'trailerTraceCreateAction'}}
         data-toggle="tooltip"
-        title="map.menu.mtg.trail.tools.trace.trailer.tooltip">
+        title={{t "map.menu.mtg.trail.tools.trace.trailer.tooltip"}}>
     <img src="assets/images/walk.png" class="inverted" width="16" height="16"/>
 </button>
