correction problèmes de niveau ET de chargement des classes de dessins au demarrage

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -219,7 +219,11 @@ ul.dropdown-menu li {
 }
 
 .hidden {
-  visibility: hidden;
+  display: none;
+}
+
+.visible {
+  display: inline;
 }
 
 .map-weather td {
