--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -16,5 +16,6 @@
   </div>
 </div>
 {{render "mtgInfo" controller="mtgTrail"}}
-<input type="file" id="input-file" class="hidden" accept=".cmp|.gpx"/>
+<input type="file" id="input-file-cmp" class="hidden" accept=".cmp"/>
+<input type="file" id="input-file-gpx" class="hidden" accept=".gpx"/>
 
