--- a/app/templates/map-basic.hbs
+++ b/app/templates/map-basic.hbs
@@ -13,4 +13,6 @@
   </div>
   {{render "mapLayers" controller="mapLayers"}}
 </div>
+<input type="file" id="input-file-cmp" class="hidden" accept=".cmp"/>
+<input type="file" id="input-file-gpx" class="hidden" accept=".gpx"/>
 
