--- a/app/templates/mtg-trail-manager.hbs
+++ b/app/templates/mtg-trail-manager.hbs
@@ -1,10 +1,10 @@
 {{#dropdown-list item="Trails" img="assets/images/track.png" toggle="tooltip" title="map.menu.mtg.trail.tooltip"}}
     <ul class="dropdown-menu mtg-trail-trails-dropdown">
         <li>
-            <table class="table table-hover table-striped table-condensed">
+            <table class="mtg-trail-manager table table-hover table-striped table-condensed">
                 <thead>
                 <tr>
-                    <th colspan="2">
+                    <th colspan="3">
                       {{render "mtgTrailManagerHead" controller="mtgTrail"}}
                     </th>
                 </tr>
