--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -6,6 +6,7 @@
 <div class="top-container btn-group">
   {{render "mtgTrail" controller="mtgTrail"}}
   {{render "mtgTrailSave" controller="mtgTrail"}}
+  {{render "mapScreenshot" controller="map"}}
   {{render "mapWeather" controller="mapWeather"}}
   {{render "mapLayers" controller="mapLayers"}}
   <div class="mtg-mode">
