--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -19,4 +19,9 @@
 {{render "mtgInfo" controller="mtgTrail"}}
 <input type="file" id="input-file-cmp" class="hidden" accept=".cmp"/>
 <input type="file" id="input-file-gpx" class="hidden" accept=".gpx"/>
-
+<div id='screenshot-box-outer' class={{if displayScreenshot "visible" "hidden"}}>
+    <div id='screenshot-box'></div>
+    <div id='screenshot-box-buttons'>
+        <button>photo</button>
+    </div>
+</div>
