--- a/app/templates/map-screenshot.hbs
+++ b/app/templates/map-screenshot.hbs
@@ -1,6 +1,3 @@
-<button type="button"
-    data-toggle="tooltip"
-    title={{t "map.menu.screenshot.tooltip" }}
-    class="btn btn-default" {{action 'screenshot'}}>
+{{#spinner-button class="btn btn-default" action="screenshot" isSpinning=isScreenshotLoading}}
   <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
-</button>
+{{/spinner-button}}
