ajout de la gestion d'imprim ecran fichier et facebook

--- a/app/templates/map-screenshot.hbs
+++ b/app/templates/map-screenshot.hbs
@@ -1,3 +1,3 @@
-{{#spinner-button class="btn btn-default" action="screenshot" isSpinning=isScreenshotLoading}}
+{{#spinner-button length=3 radius=3 class="btn btn-default" action="screenshot" isSpinning=isScreenshotLoading}}
   <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
 {{/spinner-button}}
