--- a/app/templates/map.hbs
+++ b/app/templates/map.hbs
@@ -21,8 +21,11 @@
 <input type="file" id="input-file-gpx" class="hidden" accept=".gpx"/>
 <div id="container" class="hidden">
     <div id='screenshot-box-buttons' class={{if displayScreenshot "visible" "hidden"}}>
-        <button class="btn btn-default">
+        <button class="btn btn-default save">
             <span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+        </button>
+        <button class="btn btn-default btn-facebook facebook">
+            <i class="fa fa-facebook"></i>
         </button>
     </div>
 </div>
