--- a/app/templates/map-location.hbs
+++ b/app/templates/map-location.hbs
@@ -1,5 +1,5 @@
 <div class="input-group">
-  {{input type="text" class="form-control map-location-search-input" value=locationSearch action='findLocation'}}
+  {{input type="text" class="form-control map-location-search-input" value=locationSearch enter='findLocation'}}
     <span class="input-group-btn">
       <button type="button" data-toggle="tooltip" data-original-title={{t "map.menu.location.search.tooltip"}} class="btn btn-default" {{action 'findLocation'}}>
           <i class="glyphicon glyphicon-search"></i>
