--- a/app/templates/mtg-items.hbs
+++ b/app/templates/mtg-items.hbs
@@ -1,5 +1,5 @@
 {{#dropdown-list item="Items" img="assets/images/basket.png" btn-radius="no-radius" toggle="tooltip" title="map.menu.mtg.trail.items.tooltip"}}
-    <ul {{bind-attr class=":dropdown-menu :map-items-dropdown"}}>
+    <ul class="dropdown-menu map-items-dropdown">
         <li>
             <table class="table table-hover table-striped table-condensed">
                 <thead>
