--- a/app/templates/mtg-trail-manager-head.hbs
+++ b/app/templates/mtg-trail-manager-head.hbs
@@ -1,5 +1,5 @@
 <div class="input-group width-full">
-    {{input class="form-control btn-group" placeholder="trail's name" value=addTrailName action="addTrailAction"}}
+    {{input class="form-control btn-group" placeholder="trail's name" value=addTrailName enter="addTrailAction"}}
     <span class="input-group-btn">
       <button type="button"
               data-toggle="tooltip"
